header gap fix for user function forms

--- a/app/assets/stylesheets/site/modules/m-navigation.scss
+++ b/app/assets/stylesheets/site/modules/m-navigation.scss
@@ -10,7 +10,7 @@
 
 .m-main-navigation ul {
   padding:0;
-  margin:38px 80px 0 0;
+  margin:38px 80px 0 240px;
 }
 
 .m-main-navigation li {
