--- a/app/assets/stylesheets/site/modules/m-site-header.scss
+++ b/app/assets/stylesheets/site/modules/m-site-header.scss
@@ -13,10 +13,9 @@
   margin-top: 7px;
   line-height: 1.1;
   max-width:100px;
-  float:left;
   margin-left:80px;
   margin-top: 40px;
-  position: relative;
+  position: absolute;
 }
 
 .m-site-header .logo a {
